--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,9 +6,11 @@ repos:
 -   repo: local
     hooks:
     -   id: poetry
+        name: poetry
+        entry: poetry
         args: version patch
         language: system
-        
+
 -   repo: https://github.com/psf/black
     rev: 24.3.0
     hooks:
